app/static/styles/home.css
.hidey {
  opacity: 0.01;
  transition: opacity 2s;

  &:hover {
    opacity: 0.9;
    transition: opacity 5s;
  }
}

.ruleslink,
.replylink,
.imglink {
  color: #ff43ca;
  cursor: pointer;

  &:hover {
    color: #000;
  }
}

.linklink {
  text-decoration: underline;
}

#anons {
  margin-right: 15px;
  margin-top: -50px;
  position: relative;
  z-index: 1090;

  @media @device {
    float: right;
    position: absolute;
    right: 5px;
  }

}

body {
  padding-bottom: 200px;
}

.boardlink {
  font-size: 125%;
  min-width: 50px;
  a {
    display: block;
  }
}

.hideContent {
  height: 6em;
  display: block;
  overflow: hidden;
}

.post_id,
.link_text {
  font-size: 85%;
  margin-top: 5px;
}

h1, h2, h3 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.tripcode {
  cursor: pointer;
}

.recent_container {
  padding-top: 10px;
}

.chat {
  .cmp-post {
    .post {
      border: 0px;
      padding: 0px;
      background: inherit;

      .title {
        display: none;
      }
      .op.text, .upboat {
        display: none;
      }

      .deletereply, .restore, .see_replies, .ups, .downs {
        display: none !important;
      }

      .addreply {
        opacity: 0.1;

        &:hover {
          opacity: 0.7;
        }
      }

      .replies {
        max-height: 100px !important;
      }
    }

  }
}

#fullpage .section {

  @media @desktop {
    overflow: hidden;
    display: inline-block;
  }
}

#fullpage .section.active {
  overflow: visible;
}

.stayput.header {
  position: fixed;
  top: 0px;
  margin: auto;
  width: 1170px;
  background-color: #fafafa;
  z-index: 1070;
  padding-top: 20px;

}

